# SimplyECS_v0.0

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: Dependencies.cmake
docs/: api-reference.md  architecture.md  core-concepts.md  getting-started.md
ecs_core/: CMakeLists.txt
ecs_core/include/ecs/: ComponentManager.hpp  Coordinator.hpp  Debug.hpp  DenseMap.hpp  EntityManager.hpp  EventBus.hpp  System.hpp  SystemManager.hpp  Types.hpp
ecs_core/src/: ComponentManager.cpp  ComponentManager.tpp  Coordinator.cpp  Coordinator.tpp  EntityManager.cpp  EventBus.cpp  EventBus.tpp  System.cpp  SystemManager.cpp  SystemManager.tpp
samples/: CMakeLists.txt
samples/geometry_wars/: CMakeLists.txt  README.md
samples/geometry_wars/resources/: config.json
samples/geometry_wars/src/: Game.cpp  Game.hpp  main.cpp
samples/geometry_wars/src/Components/: AdvancedEnemyComponent.hpp  BulletComponent.hpp  CollisionComponent.hpp  EnemyComponent.hpp  GlowComponent.hpp  GunComponent.hpp  HealthChangeComponent.hpp  HealthComponent.hpp  InputComponent.hpp  LifespanComponent.hpp  LightAuraComponent.hpp  ParticleComponent.hpp  PlayerComponent.hpp  ScoreComponent.hpp  ShapeComponent.hpp  SonarWeaponComponent.hpp  SoundWaveComponent.hpp  TagComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp  WeaponComponent.hpp
samples/geometry_wars/src/Core/: Helpers.cpp  Helpers.hpp
samples/geometry_wars/src/Core/Math/: Vec2.hpp
samples/geometry_wars/src/ECS/: GameInit.cpp  GameInit.hpp
samples/geometry_wars/src/Events/: CollisionEvent.hpp  FireBulletEvent.hpp  PlayerDeadEvent.hpp  PlayerSpawnedEvent.hpp  ScoredEvent.hpp  SonarAttackEvent.hpp  SpawnEnemyEvent.hpp  SpawnEnemyParticlesEvent.hpp  SpawnPlayerEvent.hpp
samples/geometry_wars/src/Factory/: EntityFactory.cpp  EntityFactory.hpp
samples/geometry_wars/src/GameStates/: GameOverState.cpp  GameOverState.hpp  MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp
samples/geometry_wars/src/Managers/: ConfigManager.cpp  ConfigManager.hpp
samples/geometry_wars/src/Systems/: AdvancedEnemySystem.cpp  AdvancedEnemySystem.hpp  BoundarySystem.cpp  BoundarySystem.hpp  CollisionResponseSystem.cpp  CollisionResponseSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EnemySpawnSystem.cpp  EnemySpawnSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  InputSystem.cpp  InputSystem.hpp  LifespanSystem.cpp  LifespanSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PlayerSpawnSystem.cpp  PlayerSpawnSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScoreSystem.cpp  ScoreSystem.hpp  WeaponSystem.cpp  WeaponSystem.hpp
